style: rename field reference to memo
